--- a/overlays/logos.html
+++ b/overlays/logos.html
@@ -12,7 +12,7 @@
       width: 1920px;
       height: 1080px;
       overflow: hidden;
-      background: #fff;
+      background: transparent;
     }
     .container {
       width: 100%;
