--- a/overlays/stream.html
+++ b/overlays/stream.html
@@ -12,7 +12,7 @@
       width: 1920px;
       height: 1080px;
       overflow: hidden;
-      background: #fff;
+      background: transparent;
       display: flex;
       flex-direction: column;
       align-items: center;
