Fix logos background transparency in output.html
- Changed .graphic-logos background from #fff to transparent
- Ensures logos render correctly for OBS compositing

--- a/output.html
+++ b/output.html
@@ -37,7 +37,7 @@
       justify-content: center;
       align-items: center;
       gap: 200px;
-      background: #fff;
+      background: transparent;
     }
     .graphic-logos .team-logo {
       width: 300px;
