Fix controller to sync with URL generator in real-time
- Changed Firebase listener from .once() to .on() for config data
- Controller sidebar now updates automatically when URL generator saves changes

--- a/controller.html
+++ b/controller.html
@@ -560,8 +560,8 @@ James Moore</textarea>
       }
     });
 
-    // Load config from Firebase
-    db.ref(`competitions/${competitionId}/config`).once('value', (snapshot) => {
+    // Load and listen for config changes from Firebase
+    db.ref(`competitions/${competitionId}/config`).on('value', (snapshot) => {
       const config = snapshot.val();
       if (config) {
         document.getElementById('eventName').value = config.eventName || '';
