--- a/output.html
+++ b/output.html
@@ -2072,6 +2072,7 @@
     .event-summary-quad-v4 .team-header {
       display: flex;
       flex-direction: column;
+      align-items: center;
       padding: 10px 14px;
       background: #27272a;
       border-bottom: 2px solid #3f3f46;
@@ -2082,6 +2083,7 @@
     .event-summary-quad-v4 .header-line1 {
       display: flex;
       align-items: center;
+      justify-content: center;
       gap: 8px;
       margin-bottom: 4px;
     }
@@ -2122,7 +2124,6 @@
       font-size: 16px;
       font-weight: 700;
       color: #fff;
-      flex: 1;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -2132,6 +2133,7 @@
     .event-summary-quad-v4 .header-line2 {
       display: flex;
       align-items: baseline;
+      justify-content: center;
       gap: 10px;
     }
 
